y... lo intentamos, hicimos lo mas que pudimos. Lamentablemente no llegamos al resultado esperado.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,4 @@
-.
+# This file lists all individuals having contributed to the shell project
+Andres Ortiz <aortizm.09@gmail.com>
+Diego Guarise <guariselopez@gmail.com>
+Juan Giménez <jjjgmzed@gmail.com>
